--- a/static/quiz-settings.html
+++ b/static/quiz-settings.html
@@ -41,7 +41,7 @@
 
 <button id="startQuiz">Start Quiz</button>
 
-<script src="file3.js"></script>
+<script src="quiz-settings.js"></script>
 
 </body>
 </html>
