--- a/static/edit.html
+++ b/static/edit.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Edit Set</h1>
     
-    <a href="file1.html">Back to Home</a>
+    <a href="home.html">Back to Home</a>
 
     <h2 id="setName">Set Name</h2>
 
@@ -26,7 +26,7 @@
         <button type="button" onclick="addCard()">Add Card</button>
     </form>
 
-    <script src="file2.js"></script>
+    <script src="edit.js"></script>
 </body>
 
 </html>
