--- a/static/home.html
+++ b/static/home.html
@@ -16,6 +16,6 @@
     <input type="text" id="newSetName">
     <button onclick="createSet()">Create</button>
 
-    <script src="file1.js"></script>
+    <script src="home.js"></script>
 </body>
 </html>
