Add quiz repeating functionality

--- a/static/quiz.html
+++ b/static/quiz.html
@@ -14,9 +14,12 @@
         <div id="answer-display" style="display: none;"></div>
     </div>
     
-    <button onclick="nextCard()">Next</button>
     <button onclick="previousCard()">Previous</button>
+    <button onclick="nextCard()">Next</button>
+    <button onclick="removeCard()">Remove</button>
+    <button onclick="resetCards()">Reset</button>
     
+    <script src="CLL.js"></script>
     <script src="quiz.js"></script>
 </body>
 </html>
